replace exe with rar

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <h1 class="project-name">PDFcvt <br/> convert all Word, Excel, PPT to PDF at once!</h1>
       <h2 class="project-tagline"></h2>
       
-        <a href="https://pdfcvt.com/PDFcvt.exe" class="btn">DownLoad</a>
+        <a href="https://pdfcvt.com/PDFcvt.rar" class="btn">DownLoad</a>
       
     </header>
 
     <main id="content" class="main-content" role="main">
 <h2>Introduction</h2>
 
-<p>Just download  <a href="https://pdfcvt.com/PDFcvt.exe">PDFcvt</a> and run it on your computer,you can see a simple and clear interface.Then just follow the prompts on the interface.</p>
+<p>Just download  <a href="https://pdfcvt.com/PDFcvt.rar">PDFcvt</a> and run it on your computer,you can see a simple and clear interface.Then just follow the prompts on the interface.</p>
 <p style='text-align: center;'><img src="introduce.png"/></p>
 <h2>Operation video</h2>
 <iframe width="832" height="500" src="https://www.youtube.com/embed/YmRch-M9wP8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
