--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2 class="project-tagline"></h2>
       
         <a href="https://pdfcvt.com/PDFcvt.rar" class="btn">DownLoad</a>
-      
+       <a href="https://pdfcvt.com/PDFcvt中文版.rar" class="btn">中文版</a>
     </header>
 
     <main id="content" class="main-content" role="main">
